# simple-fastapi-project

./: .gitignore  README.md  create_model.sh  pyproject.toml  requirements.txt  start.sh
scripts/: train_save_model.py
send_request/: send.ipynb
service/: main.py
src/recosys/models/: item_based_model.py  serialize.py
