[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recosys"
version = "0.0.1"
authors = [
    {name = "Alex Bond", email = "somemail@gail.com"},
]
description = "simple fastapi project :-)"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/bondaleksey/simple-fastapi-project"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

